<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- zyj添加 -->
    <string name="no_read_message">"···"</string>
    <string name="app_name">文博会</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>

    <integer name="app_version_code">1</integer>
    <!-- 设置后台停留时间验证 -->
    <integer name="time">1800000</integer>

    <string name="introduction_zh"><u>介绍</u></string>
    <string name="introduction_en"><u>Introduction</u></string>
    <string name="app_version">v1.0</string>
    <string name="network">网络不给力</string>
    <string name="attentionyes">关注成功</string>
    <string name="attentionno">取消关注</string>
    <string name="near_merchant">附近商铺</string>
    <string name="proj_name">ShareSDK_TPL</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_password"><u>忘记密码</u></string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="username_hint">请输入手机号或用户名</string>
    <string name="password_hint">输入密码</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="third_login_hint">-------------使用合作账号登陆--------------</string>
    <string name="r_username_hint">请输入手机号或邮箱账号</string>
    <string name="r_password_hint">6-20位字母、数字结合</string>
    <string name="r_sex_text">性别</string>
    <string name="r_women">女</string>
    <string name="r_man">男</string>
    <string name="r_register">立即注册</string>
    <string name="logout">注销</string>
    <string name="refresh">刷新</string>
    <string name="add">添加</string>
    <string name="map">地图</string>
    <string name="union">合并</string>
    <string name="split">拆分</string>
    <string name="book">预定</string>
    <string name="unsubscribe">退订</string>
    <string name="isToMerge">是否进行合并</string>
    <string name="isToBook">是否预定该展位</string>
    <string name="isToSplit">是否拆分该展位</string>
    <string name="contact">联系人:</string>
    <string name="selectOne">请选择一个展位</string>
    <string name="smallBatch">该展位不能拆分</string>
    <string name="onlyOneBatch">只能选择一个展位</string>
    <string name="product_search">输入关键字</string>
    <string name="company_search">展商搜索</string>
    <string name="company_edit">展商编辑</string>
    <string name="input_company_name">请输入展商名称</string>
    <string name="notSelectBatch">您没有选择要合并的展位</string>
    <string name="selectOneOver">请选择两个或两个以上展位</string>
    <!-- 验证信息 -->
    <string name="verification_login">用户名和密码不能为空</string>

    <!-- 7.2展馆 -->
    <string name="h72">H7.2</string>
    <string name="cmef">CMEF</string>
    <string name="icmd">ICMD</string>
    <string name="other">Other</string>
    <!-- 会议新闻的四个选项卡内容  anthor:renzhihua -->
    <string name="pchinews_news">会议新闻</string>
    <string name="pchinews_press">新闻发布会</string>
    <string name="pchinews_exhibition">展会</string>
    <string name="pchinews_activity">活动</string>
    <string name="register_note_en"></string>
    <string name="register_note_cn">总则</string>

    <!-- sharesdk s -->
    <string name="sm_item_comment_like">评论与赞</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @ShareSDK</string>
    <string name="comment_like_id">ssdk20131220190000</string>
    <string name="comment_like_title">ShareSDK“评论与赞”模块发布</string>
    <string name="comment_like_publich_time">2013-12-20 19:00</string>
    <string name="comment_like_author">ShareSDK</string>
    <string name="comment_like_comment_list">跟帖</string>
    <string name="like_success">点赞成功</string>
    <string name="like_fail">点赞失败</string>
    <string name="myplatform">自定义平台</string>
    <!-- sharesdk e -->

    <string name="title_activity_my_task">MyTaskActivity</string>
    <string name="hello_world">Hello world!</string>
    <!-- 自定义Dialog -->
    <string name="alert_cancel">取消</string>
    <string name="alert_ok">确定</string>
    <string name="alert_content">提交后此任务状态不可被修改，请您确认该项任务是否完成？</string>
    <string name="title_activity_cultural_exhibit">CulturalExhibitActivity</string>
    <string name="title_activity_my_task_driver">MyTaskDriverActivity</string>
    <string name="title_activity_vipinfo">VIPInfoActivity</string>
    <string name="title_activity_cultrual_exhibit_detail">CultrualExhibitDetailActivity</string>
    <string name="title_activity_cultural_exhibit_list">CulturalExhibitListActivity</string>
    <string name="title_activity_schdule_detail">SchduleDetailActivity</string>
    <string name="title_activity_xing_cheng_detail">XingChengDetailActivity</string>
    <string name="title_activity_vipinfo_second_level">VipinfoSecondLevelActivity</string>
    <string name="title_activity_fixed_task">FixedTaskActivity</string>
    <string name="title_activity_mytask_list">MytaskListActivity</string>
    <string name="title_activity_mytask_vip_list">MytaskVipListActivity</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_activity_vip_list_search">VipListSearchActivity</string>

</resources>